Adding about me to site

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="index.html">About Me</a>
 </li>
 <li>
   <a href="beer_industry_analysis_for_budweiser.html">Case Study 1</a>
@@ -298,15 +298,15 @@ $(document).ready(function () {
 </div>
 
 
-<div id="simple-website-example" class="section level1">
-<h1>Simple Website Example</h1>
-<div id="header-2" class="section level2">
-<h2>Header 2</h2>
-<div id="header-3" class="section level3">
-<h3>Header 3</h3>
-<p>Pushing index.html to github.io</p>
-</div>
-</div>
+<div id="about-me" class="section level2">
+<h2>About Me</h2>
+<ul>
+<li>Jorge Olmos</li>
+<li>I’m originally from Panama City, Panama, but grew up in Houston, TX</li>
+<li>I’m a history and philosophy buff, code on my spare time, and enjoy running and lifting weights.</li>
+<li>I work for Capital One</li>
+<li>I’m a Texas A&amp;M former student (Aggies would understand)</li>
+</ul>
 </div>
 
 
