made some changes to the about me

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Jorge Olmos" />
 
-<meta name="date" content="2019-11-14" />
 
-<title>Simple Website</title>
+<title>About Me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -291,15 +289,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Simple Website</h1>
-<h4 class="author">Jorge Olmos</h4>
-<h4 class="date">11/14/2019</h4>
+<h1 class="title toc-ignore">About Me</h1>
 
 </div>
 
 
-<div id="about-me" class="section level2">
-<h2>About Me</h2>
+<div id="here-are-some-details-about-me" class="section level2">
+<h2>Here are some details about me!</h2>
 <ul>
 <li>Jorge Olmos</li>
 <li>I’m originally from Panama City, Panama, but grew up in Houston, TX</li>
@@ -307,6 +303,7 @@ $(document).ready(function () {
 <li>I work for Capital One</li>
 <li>I’m a Texas A&amp;M former student (Aggies would understand)</li>
 </ul>
+<p>“The other tabs represent work / analyses that I have completed. Please check them out!”</p>
 </div>
 
 
