adding beer app

--- a/beerApp.html
+++ b/beerApp.html
@@ -10,9 +10,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Jorge Olmos" />
 
+<meta name="date" content="2019-11-13" />
 
-<title>About Me</title>
+<title>beerApp</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -288,26 +290,18 @@ $(document).ready(function () {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div class="fluid-row" id="section-header">
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">beerApp</h1>
+<h4 class="author">Jorge Olmos</h4>
+<h4 class="date">11/13/2019</h4>
 
 </div>
 
 
-<div id="here-are-some-details-about-me" class="section level2">
-<h2>Here are some details about me!</h2>
-<ul>
-<li>Jorge Olmos</li>
-<li>I’m originally from Panama City, Panama, but grew up in Houston, TX</li>
-<li>I’m a history and philosophy buff, code on my spare time, and enjoy running and lifting weights.</li>
-<li>I work for Capital One</li>
-<li>I’m a Texas A&amp;M former student (Aggies would understand)</li>
-</ul>
-<p>“The other tabs represent work / analyses that I have completed. Please check them out!”</p>
-</div>
+<iframe data-deferred-src="app80bf8238737e939599b286e7e86570c5/?w=&amp;__subapp__=1" width="100%" height="400" class="shiny-frame shiny-frame-deferred"></iframe>
 
 
 
@@ -331,7 +325,7 @@ $(document).ready(function () {
 
 <script>
 $(document).ready(function () {
-  window.buildTabsets("TOC");
+  window.buildTabsets("section-TOC");
 });
 
 $(document).ready(function () {
