--- a/beerAppLink.html
+++ b/beerAppLink.html
@@ -10,9 +10,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Jorge Olmos" />
 
+<meta name="date" content="2019-11-15" />
 
-<title>About Me</title>
+<title>Beer App</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -292,22 +294,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Beer App</h1>
+<h4 class="author">Jorge Olmos</h4>
+<h4 class="date">11/15/2019</h4>
 
 </div>
 
 
-<div id="here-are-some-details-about-me" class="section level2">
-<h2>Here are some details about me!</h2>
-<ul>
-<li>Jorge Olmos</li>
-<li>I’m originally from Panama City, Panama, but grew up in Houston, TX</li>
-<li>I’m a history and philosophy buff, code on my spare time, and enjoy running and lifting weights.</li>
-<li>I work for Capital One</li>
-<li>I’m a Texas A&amp;M former student (Aggies would understand)</li>
-</ul>
-<p>“The other tabs represent work / analyses that I have completed. Please check them out!”</p>
-</div>
+<p>Here’s the link to my Beer App <a href = "https://jolmos.shinyapps.io/beerApp/">Click me</a>!</p>
 
 
 
